# cs07-assignments-eugenele-o

./: README.md  main.py  pyproject.toml
Assignment-00/Graph/: graph.ipynb
Assignment-00/SampleSuperStore/: SuperStoreSample.ipynb
Assignment-00/Turtle/: turtle.ipynb
Assignment-01/: SuperStoreSample.ipynb
Assignment-01/SampleSuperStore/: SuperStoreSample.ipynb
Assignment-02/: Assignment 2.ipynb  Assignment-02.ipynb  C to F Converter.py  M to F Ratio.py
Assignment-03/: Assignment-03.ipynb
Assignment-04/: Assignment-04.ipynb
Assignment-04/Assignment 4-1/: Assignment 4-1.ipynb
Assignment-04/Assignment 4-2/: Assignment 4-2.ipynb
Assignment-04/Assignment 4-3/: Assignment 4-3.ipynb
Assignment-04/Assignment 4-4/: Assignment 4-4.ipynb
Assignment-04/Assignment 4-6~4-8/: Assignment 4-3.ipynb
Assignment-04/Assignment 4-9~4-11/: Assignment 4-4.ipynb
Assignment-05/: Exercise 5-1.py  Exercise 5-2.py
Assignment-05/Assignment 5-7~5-10/: .Assignment 5-7~5-10.ipynb
Assignment-05/Assignment 7-11~7-12/: Assignment 7-11~7-12.ipynb
Assignment-05/Assignment 7-1~7-5/: .Assignment 7-1~7-5.ipynb
Assignment-06/: Assignment 6-1.py  Assignment 6.ipynb
Assignment-07/Assignment 7-11~7-12/: Assignment 7-11~7-12.ipynb
Assignment-07/Assignment 7-1~7-5/: Assignment 7-1~7-5.ipynb
Exercise-05/: Exercise 5.ipynb
Final Exam/: Final Exam 1.ipynb  ca2021.txt  fl2021.txt
Quiz 4/: Quiz 4-1.py  Quiz 4-2.py  Quiz 4.ipynb
Quiz 5/: Quiz 5-1.py  Quiz 5-3.py  Quiz 5.ipynb
Quiz 6/: Quiz 6.ipynb
Quiz 7/: Quiz 7.ipynb
(+2 files in other folders)
