[tool.poetry]
name = "repl_python3_cs07-assignments-eugenele-o"
version = "0.1.0"
description = ""
authors = ["eugenele <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
